crates/css_ast/tests/snapshots/postcss_snapshots__postcss_rule_no_semicolon.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
StyleSheet(
  rules: [
    StyleRule(
      rule: QualifiedRule(
        prelude: SelectorList([
          (CompoundSelector([
            Tag(Html(A(Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(0),
              len: 1,
            ))))),
          ]), None),
        ]),
        block: Block(
          open_curly: LeftCurly(Cursor(
            kind: "LeftCurly",
            offset: SourceOffset(1),
            len: 1,
          )),
          declarations: [
            Declaration(
              name: Ident(Cursor(
                kind: "Ident",
                offset: SourceOffset(2),
                len: 5,
              )),
              colon: Colon(Cursor(
                kind: "Colon",
                offset: SourceOffset(7),
                len: 1,
              )),
              value: ColorStyleValue(Literal(Named(Black(Ident(Cursor(
                kind: "Ident",
                offset: SourceOffset(8),
                len: 5,
              )))))),
              important: None,
              semicolon: None,
            ),
          ],
          rules: [],
          close_curly: Some(RightCurly(Cursor(
            kind: "RightCurly",
            offset: SourceOffset(13),
            len: 1,
          ))),
        ),
      ),
    ),
  ],
)
