crates/css_ast/tests/snapshots/postcss_snapshots__postcss_semicolons.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
StyleSheet(
  rules: [
    StyleRule(
      rule: QualifiedRule(
        prelude: SelectorList([
          (CompoundSelector([
            Tag(Html(A(Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(0),
              len: 1,
            ))))),
          ]), None),
        ]),
        block: Block(
          open_curly: LeftCurly(Cursor(
            kind: "LeftCurly",
            offset: SourceOffset(2),
            len: 1,
          )),
          declarations: [
            Declaration(
              name: Ident(Cursor(
                kind: "Ident",
                offset: SourceOffset(10),
                len: 5,
              )),
              colon: Colon(Cursor(
                kind: "Colon",
                offset: SourceOffset(15),
                len: 1,
              )),
              value: ColorStyleValue(Literal(Named(Black(Ident(Cursor(
                kind: "Ident",
                offset: SourceOffset(17),
                len: 5,
              )))))),
              important: None,
              semicolon: Some(Semicolon(Cursor(
                kind: "Semicolon",
                offset: SourceOffset(22),
                len: 1,
              ))),
            ),
          ],
          rules: [],
          close_curly: Some(RightCurly(Cursor(
            kind: "RightCurly",
            offset: SourceOffset(32),
            len: 1,
          ))),
        ),
      ),
    ),
  ],
)
